# private-blockspace-proxy

./: Cargo.toml  Dockerfile  README.md  compose.yml  example.env  justfile
.github/workflows/: docker-build-publish.yml
.helix/: languages.toml
doc/: verifiable_encryption.md
scripts/: init_celestia_docker.sh  test_example_data_file_via_curl.sh
service/: Cargo.toml
service/src/: main.rs
service/src/internal/: error.rs  job.rs  runner.rs  util.rs
service/src/rpc/: blob.rs  state.rs  tx_config.rs
zkVM/sp1/: justfile
