[workspace]
members = ["service", "zkVM/common", "zkVM/sp1", "zkVM/sp1/program-chacha"]
default-members = ["service"]
resolver = "3"

[workspace.package]
version = "0.2.3"
edition = "2024"
authors = ["Nuke <nuke-web3@proton.me>"]
license = "MIT"
homepage = "https://celestia.org"
repository = "https://github.com/celestiaorg/eq-service"

[workspace.dependencies]
zkvm-common = { path = "zkVM/common", default-features = false, version = "0.2.3" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
sp1-zkvm = "5.2"
sp1-sdk = "5.2"
sp1-build = "5.2"
chacha20 = "0.9"
jsonrpsee = { version = "0.25", features = ["macros", "server", "http-client"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
celestia-client = "0.1"
dotenv = "0.15"
base64 = "0.22"
bincode = "1.3"
log = "0.4"
sled = "0.34"
thiserror = "2.0"
env_logger = "0.11"
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
rustls = "0.23"
rustls-pemfile = "2.2"
bytes = "1.10"
pingora-core = "0.6"
pingora-http = "0.6"
pingora-proxy = "0.6"
async-trait = "0.1"

sha2 = "=0.10.8"
[patch.crates-io]
# TODO: update to 5.0?
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0" }

[workspace.features]
reproducible-elf = ["service/reproducible-elf", "zkVM/sp1/reproducible-elf"]
