[package]
name = "pda-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
zkvm-common = { workspace = true, features = ["std"] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
celestia-client.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
bincode.workspace = true
sled.workspace = true
sp1-sdk = { workspace = true, features = ["native-gnark"] }
log.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
env_logger.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
bytes.workspace = true
pingora-core.workspace = true
pingora-http.workspace = true
pingora-proxy.workspace = true
async-trait.workspace = true
url.workspace = true

[features]
default = []

reproducible-elf = []
