[package]
name = "pbs-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
zkvm-common = { workspace = true, features = ["std"] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
celestia-client.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util.workspace = true
http.workspace = true
bincode.workspace = true
sled.workspace = true
sp1-sdk = { workspace = true, features = ["native-gnark"] }
log.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
env_logger.workspace = true
rand.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
hyper-rustls.workspace = true

[features]
default = []

reproducible-elf = []
